Fixed some layout issues; now the progress bar updates as transactions are added

--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -42,7 +42,7 @@ html[data-hoodie-account-status=signedout] .hoodie-account-signedout {
 .content {
   padding: 10px;
   float: left;
-  width: 380px;
+  /*width: 380px;*/
 }
 .code {
   margin: 0 0 0 400px;
